prevent horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,10 @@ body {
   overflow-y: scroll;
 }
 
-/* html, body {
+html, body {
   max-width: 100%;
-  overflow-x: hidden;
-} */
+  overflow-x: hidden !important;
+}
 
 /* reset browser defaults */
 * {
